# VNNLIB-CPP

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: buildAndDeploy.yml  buildAndTest.yml
cmake/: PatchGenerated.cmake  PatchGenerated.cmake.in
include/: CompatTransformer.h  DNFConverter.h  LinearArithExpr.h  TypeChecker.h  TypedAST.h  TypedAbsyn.h  TypedBuilder.h  VNNLib.h  VNNLibExport.h
src/: TypeChecker.cpp  TypedAST.cpp  TypedAbsyn.cpp  TypedBuilder.cpp  VNNLib.cpp  VNNLibJulia.cpp  VNNLib_julia.cpp
